build/out-full/paintmix_py/_lowlevel.py

"""Auto-generated by JuliaLibWrapping. Do not edit by hand."""
import ctypes
import os
import sys
import pathlib
import numpy as np

_HERE = pathlib.Path(__file__).resolve().parent
_LIBRARY_BASENAME = "paintmix"
_LIBRARY_ENV_VAR = "PAINTMIX_PY_LIBRARY"

def _resolve_library_path():
    override = os.environ.get(_LIBRARY_ENV_VAR)
    if override:
        return override
    if sys.platform == "win32":
        suffixes = (".dll",)
    elif sys.platform == "darwin":
        suffixes = (".dylib", ".so")
    else:
        suffixes = (".so", ".dylib")
    tried = []
    for suffix in suffixes:
        candidate = _HERE / (_LIBRARY_BASENAME + suffix)
        tried.append(str(candidate))
        if candidate.exists():
            return str(candidate)
    raise FileNotFoundError(
        f"Could not locate shared library {_LIBRARY_BASENAME!r}. "
        f"Tried: {tried}. Set {_LIBRARY_ENV_VAR} to an explicit path."
    )

_lib = ctypes.CDLL(_resolve_library_path())

_JLW_LOADED_ATTR = "_jlw_loaded_packages"
_jlw_loaded = getattr(sys, _JLW_LOADED_ATTR, None)
if _jlw_loaded is None:
    _jlw_loaded = set()
    setattr(sys, _JLW_LOADED_ATTR, _jlw_loaded)
_jlw_this_pkg = __package__ or __name__
if _jlw_loaded and _jlw_this_pkg not in _jlw_loaded:
    import warnings
    warnings.warn(
        f"Loading JuliaLibWrapping-generated package {_jlw_this_pkg!r} into a "
        f"process that already loaded {sorted(_jlw_loaded)!r}. "
        "This package was built without a private libjulia, so both "
        "packages resolve a single Julia runtime and the first call into "
        "whichever did not initialize it aborts the process. Rebuild with "
        "`privatize = true`, or compile both APIs into a single juliac "
        "library. See the JuliaLibWrapping docs section on multiple "
        "wrapped libraries in one process.",
        RuntimeWarning,
        stacklevel=2,
    )
_jlw_loaded.add(_jlw_this_pkg)

class JLWError(RuntimeError):
    """Raised when a wrapped function returns a non-zero JLWStatus.code."""
    def __init__(self, code, message):
        super().__init__(f"[{code}] {message}")
        self.code = code
        self.message = message

def _check_layout(cls, size, offsets):
    actual = (ctypes.sizeof(cls), *(getattr(cls, name).offset for name, _ in cls._fields_))
    if actual != (size, *offsets):
        raise RuntimeError(
            f"{cls.__name__}: ctypes computed (size, *offsets) {actual}, but the "
            f"library was compiled with {(size, *offsets)}; the generated "
            "bindings do not match this platform's ABI"
        )

class JLWStatus(ctypes.Structure):
    _fields_ = [
        ("code", ctypes.c_int32),
        ("message", (ctypes.c_uint8 * 256)),
    ]
_check_layout(JLWStatus, 260, (0, 4))

class ModelInfo(ctypes.Structure):
    _fields_ = [
        ("status", JLWStatus),
        ("abi_version", ctypes.c_int32),
        ("format_version", ctypes.c_int32),
        ("grid_n", ctypes.c_int32),
        ("channel_count", ctypes.c_int32),
        ("flags", ctypes.c_uint32),
        ("forward_crc32", ctypes.c_uint32),
        ("inverse_crc32", ctypes.c_uint32),
        ("model_id_lo", ctypes.c_uint64),
        ("model_id_hi", ctypes.c_uint64),
    ]
_check_layout(ModelInfo, 304, (0, 260, 264, 268, 272, 276, 280, 284, 288, 296))

class CVector_borrowed_Float64(ctypes.Structure):
    _fields_ = [
        ("dims", (ctypes.c_int64 * 1)),
        ("data", ctypes.POINTER(ctypes.c_double)),
    ]

    @classmethod
    def from_numpy(cls, arr):
        """Return a CArray view of the 1-D numpy array `arr`.

        Raises ValueError on ndim, contiguity, or dtype mismatch (fail-fast: no
        silent reinterpretation). The returned object holds a reference to `arr`,
        so the caller must keep it alive for the duration of any C call that uses
        the buffer."""
        if arr.ndim != 1:
            raise ValueError(f"expected 1-D array, got {arr.ndim}-D")
        if not (arr.flags.c_contiguous or arr.flags.f_contiguous):
            raise ValueError("array must be contiguous")
        expected_dtype = np.dtype("float64")
        if arr.dtype != expected_dtype:
            raise ValueError(f"expected dtype float64, got {arr.dtype}")
        obj = cls(dims=(ctypes.c_int64 * 1)(*arr.shape),
                  data=arr.ctypes.data_as(ctypes.POINTER(ctypes.c_double)))
        obj._buffer = arr
        return obj

    def as_numpy(self):
        """Return a 1-D numpy view of the underlying buffer (no copy)."""
        return np.ctypeslib.as_array(self.data, shape=(self.dims[0],))
_check_layout(CVector_borrowed_Float64, 16, (0, 8))

class CVector_borrowed_UInt32(ctypes.Structure):
    _fields_ = [
        ("dims", (ctypes.c_int64 * 1)),
        ("data", ctypes.POINTER(ctypes.c_uint32)),
    ]

    @classmethod
    def from_numpy(cls, arr):
        """Return a CArray view of the 1-D numpy array `arr`.

        Raises ValueError on ndim, contiguity, or dtype mismatch (fail-fast: no
        silent reinterpretation). The returned object holds a reference to `arr`,
        so the caller must keep it alive for the duration of any C call that uses
        the buffer."""
        if arr.ndim != 1:
            raise ValueError(f"expected 1-D array, got {arr.ndim}-D")
        if not (arr.flags.c_contiguous or arr.flags.f_contiguous):
            raise ValueError("array must be contiguous")
        expected_dtype = np.dtype("uint32")
        if arr.dtype != expected_dtype:
            raise ValueError(f"expected dtype uint32, got {arr.dtype}")
        obj = cls(dims=(ctypes.c_int64 * 1)(*arr.shape),
                  data=arr.ctypes.data_as(ctypes.POINTER(ctypes.c_uint32)))
        obj._buffer = arr
        return obj

    def as_numpy(self):
        """Return a 1-D numpy view of the underlying buffer (no copy)."""
        return np.ctypeslib.as_array(self.data, shape=(self.dims[0],))
_check_layout(CVector_borrowed_UInt32, 16, (0, 8))

class CVector_borrowed_Float32(ctypes.Structure):
    _fields_ = [
        ("dims", (ctypes.c_int64 * 1)),
        ("data", ctypes.POINTER(ctypes.c_float)),
    ]

    @classmethod
    def from_numpy(cls, arr):
        """Return a CArray view of the 1-D numpy array `arr`.

        Raises ValueError on ndim, contiguity, or dtype mismatch (fail-fast: no
        silent reinterpretation). The returned object holds a reference to `arr`,
        so the caller must keep it alive for the duration of any C call that uses
        the buffer."""
        if arr.ndim != 1:
            raise ValueError(f"expected 1-D array, got {arr.ndim}-D")
        if not (arr.flags.c_contiguous or arr.flags.f_contiguous):
            raise ValueError("array must be contiguous")
        expected_dtype = np.dtype("float32")
        if arr.dtype != expected_dtype:
            raise ValueError(f"expected dtype float32, got {arr.dtype}")
        obj = cls(dims=(ctypes.c_int64 * 1)(*arr.shape),
                  data=arr.ctypes.data_as(ctypes.POINTER(ctypes.c_float)))
        obj._buffer = arr
        return obj

    def as_numpy(self):
        """Return a 1-D numpy view of the underlying buffer (no copy)."""
        return np.ctypeslib.as_array(self.data, shape=(self.dims[0],))
_check_layout(CVector_borrowed_Float32, 16, (0, 8))

_lib.paintmix_encode_f32.argtypes = [CVector_borrowed_Float32, CVector_borrowed_Float32]
_lib.paintmix_encode_f32.restype = JLWStatus
def paintmix_encode_f32(rgb, latent):
    _result = _lib.paintmix_encode_f32(rgb, latent)
    if _result.code != 0:
        _msg = bytes(_result.message).rstrip(b"\x00").decode("utf-8", errors="replace")
        raise JLWError(_result.code, _msg)
    return _result

_lib.paintmix_weighted_mix_f64.argtypes = [CVector_borrowed_Float64, CVector_borrowed_Float64, CVector_borrowed_Float64, ctypes.c_int64]
_lib.paintmix_weighted_mix_f64.restype = JLWStatus
def paintmix_weighted_mix_f64(colors, weights, out, count):
    _result = _lib.paintmix_weighted_mix_f64(colors, weights, out, count)
    if _result.code != 0:
        _msg = bytes(_result.message).rstrip(b"\x00").decode("utf-8", errors="replace")
        raise JLWError(_result.code, _msg)
    return _result

_lib.paintmix_mix_f32.argtypes = [CVector_borrowed_Float32, CVector_borrowed_Float32, ctypes.c_float, CVector_borrowed_Float32]
_lib.paintmix_mix_f32.restype = JLWStatus
def paintmix_mix_f32(a, b, t, out):
    _result = _lib.paintmix_mix_f32(a, b, t, out)
    if _result.code != 0:
        _msg = bytes(_result.message).rstrip(b"\x00").decode("utf-8", errors="replace")
        raise JLWError(_result.code, _msg)
    return _result

_lib.paintmix_decode_f32.argtypes = [CVector_borrowed_Float32, CVector_borrowed_Float32]
_lib.paintmix_decode_f32.restype = JLWStatus
def paintmix_decode_f32(latent, rgb):
    _result = _lib.paintmix_decode_f32(latent, rgb)
    if _result.code != 0:
        _msg = bytes(_result.message).rstrip(b"\x00").decode("utf-8", errors="replace")
        raise JLWError(_result.code, _msg)
    return _result

_lib.paintmix_bulk_mix_f64.argtypes = [CVector_borrowed_Float64, CVector_borrowed_Float64, CVector_borrowed_Float64, CVector_borrowed_Float64, ctypes.c_int64]
_lib.paintmix_bulk_mix_f64.restype = JLWStatus
def paintmix_bulk_mix_f64(a, b, t, out, count):
    _result = _lib.paintmix_bulk_mix_f64(a, b, t, out, count)
    if _result.code != 0:
        _msg = bytes(_result.message).rstrip(b"\x00").decode("utf-8", errors="replace")
        raise JLWError(_result.code, _msg)
    return _result

_lib.paintmix_model_info.argtypes = []
_lib.paintmix_model_info.restype = ModelInfo
def paintmix_model_info():
    _result = _lib.paintmix_model_info()
    if _result.status.code != 0:
        _msg = bytes(_result.status.message).rstrip(b"\x00").decode("utf-8", errors="replace")
        raise JLWError(_result.status.code, _msg)
    return _result

_lib.paintmix_abi_version.argtypes = []
_lib.paintmix_abi_version.restype = ctypes.c_int32
def paintmix_abi_version():
    return _lib.paintmix_abi_version()

_lib.paintmix_encode_f64.argtypes = [CVector_borrowed_Float64, CVector_borrowed_Float64]
_lib.paintmix_encode_f64.restype = JLWStatus
def paintmix_encode_f64(rgb, latent):
    _result = _lib.paintmix_encode_f64(rgb, latent)
    if _result.code != 0:
        _msg = bytes(_result.message).rstrip(b"\x00").decode("utf-8", errors="replace")
        raise JLWError(_result.code, _msg)
    return _result

_lib.paintmix_table_crc32.argtypes = [ctypes.c_int32, CVector_borrowed_UInt32]
_lib.paintmix_table_crc32.restype = JLWStatus
def paintmix_table_crc32(index, out):
    _result = _lib.paintmix_table_crc32(index, out)
    if _result.code != 0:
        _msg = bytes(_result.message).rstrip(b"\x00").decode("utf-8", errors="replace")
        raise JLWError(_result.code, _msg)
    return _result

_lib.paintmix_weighted_mix_f32.argtypes = [CVector_borrowed_Float32, CVector_borrowed_Float32, CVector_borrowed_Float32, ctypes.c_int64]
_lib.paintmix_weighted_mix_f32.restype = JLWStatus
def paintmix_weighted_mix_f32(colors, weights, out, count):
    _result = _lib.paintmix_weighted_mix_f32(colors, weights, out, count)
    if _result.code != 0:
        _msg = bytes(_result.message).rstrip(b"\x00").decode("utf-8", errors="replace")
        raise JLWError(_result.code, _msg)
    return _result

_lib.paintmix_bulk_mix_f32.argtypes = [CVector_borrowed_Float32, CVector_borrowed_Float32, CVector_borrowed_Float32, CVector_borrowed_Float32, ctypes.c_int64]
_lib.paintmix_bulk_mix_f32.restype = JLWStatus
def paintmix_bulk_mix_f32(a, b, t, out, count):
    _result = _lib.paintmix_bulk_mix_f32(a, b, t, out, count)
    if _result.code != 0:
        _msg = bytes(_result.message).rstrip(b"\x00").decode("utf-8", errors="replace")
        raise JLWError(_result.code, _msg)
    return _result

_lib.paintmix_mix_f64.argtypes = [CVector_borrowed_Float64, CVector_borrowed_Float64, ctypes.c_double, CVector_borrowed_Float64]
_lib.paintmix_mix_f64.restype = JLWStatus
def paintmix_mix_f64(a, b, t, out):
    _result = _lib.paintmix_mix_f64(a, b, t, out)
    if _result.code != 0:
        _msg = bytes(_result.message).rstrip(b"\x00").decode("utf-8", errors="replace")
        raise JLWError(_result.code, _msg)
    return _result

_lib.paintmix_decode_f64.argtypes = [CVector_borrowed_Float64, CVector_borrowed_Float64]
_lib.paintmix_decode_f64.restype = JLWStatus
def paintmix_decode_f64(latent, rgb):
    _result = _lib.paintmix_decode_f64(latent, rgb)
    if _result.code != 0:
        _msg = bytes(_result.message).rstrip(b"\x00").decode("utf-8", errors="replace")
        raise JLWError(_result.code, _msg)
    return _result

